# nodejs-server/service/UsersService.js
@@ -1,0 +1,17 @@
+'use strict';
+
+
+/**
+ * follow a specific user
+ * Follow the user
+ *
+ * body User Article item to add (optional)
+ * id String ID of the User
+ * no response value expected for this operation
+ **/
+exports.followUser = function(body,id) {
+  return new Promise(function(resolve, reject) {
+    resolve();
+  });
+}
+
